force-app/main/default/objects/OEM_Entropy_Finding__c/OEM_Entropy_Finding__c.object-meta.xml
<CustomObject>
    <label>Entropy Finding</label>
    <pluralLabel>Entropy Findings</pluralLabel>
    <nameField><label>Finding Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>