force-app/main/default/objects/OEM_Entropy_Finding__c/fields/Delta__c.field-meta.xml
<CustomField>
    <fullName>Delta__c</fullName>
    <label>Delta</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>