force-app/main/default/objects/OEM_Entropy_Finding__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Change Velocity</fullName><default>false</default><label>Change Velocity</label></value>
            <value><fullName>Automation Sprawl</fullName><default>false</default><label>Automation Sprawl</label></value>
            <value><fullName>Permission Sprawl</fullName><default>false</default><label>Permission Sprawl</label></value>
            <value><fullName>Duplication</fullName><default>false</default><label>Duplication</label></value>
            <value><fullName>Hotspots</fullName><default>false</default><label>Hotspots</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>