force-app/main/default/objects/OEM_Entropy_Finding__c/fields/EntropyContribution__c.field-meta.xml
<CustomField>
    <fullName>EntropyContribution__c</fullName>
    <label>Entropy Contribution</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>