force-app/main/default/objects/OEM_Entropy_Finding__c/fields/HelpUrl__c.field-meta.xml
<CustomField>
    <fullName>HelpUrl__c</fullName>
    <label>Help URL</label>
    <type>Url</type>
</CustomField>