force-app/main/default/objects/OEM_Entropy_Finding__c/fields/IsAvailable__c.field-meta.xml
<CustomField>
    <fullName>IsAvailable__c</fullName>
    <label>Measure Available</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>