force-app/main/default/objects/OEM_Entropy_Finding__c/fields/MeasureKey__c.field-meta.xml
<CustomField>
    <fullName>MeasureKey__c</fullName>
    <label>Measure Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>