force-app/main/default/objects/OEM_Entropy_Finding__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <label>Snapshot</label>
    <type>Lookup</type>
    <referenceTo>OEM_Entropy_Snapshot__c</referenceTo>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipName>Findings</relationshipName>
    <required>true</required>
</CustomField>