force-app/main/default/objects/OEM_Entropy_Finding__c/fields/SuggestedAction__c.field-meta.xml
<CustomField>
    <fullName>SuggestedAction__c</fullName>
    <label>Suggested Action</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>